# glyphswap-

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  build.ps1
GlyphSwap/: config.ini
PS4Mod/: config.ini
injector/: main.cpp
src/: Crc32.h  TextureLoader.h  dllmain.cpp  dxgi.def  proxy_dxgi.cpp
tools/: atlas_layout.ini  build_atlas.ps1
tools/glyphs/: README.md
